--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body {
 
 .about-img {
     flex: 0 0 50%;
-    padding-right: 60px;
+    padding-right: 30px;
     margin-top: -100px;
 }
 
@@ -349,6 +349,82 @@ body {
 
 .futer p {
   margin: 0;
+}
+
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 90%;
+  }
+  .header {
+    padding: 10px 0;
+  }
+
+  .logo {
+    width: 60px;
+  }
+
+  .navigation ul li {
+    margin: 0 5px;
+  }
+
+  .navigation ul li a {
+    font-size: 1em;
+  }
+}
+@media screen and (max-width: 500px) {
+  .container {
+    width: 90%;
+  }
+  .header {
+    padding: 10px 0;
+  }
+
+  .logo {
+    width: 60px;
+  }
+
+  .navigation ul li {
+    margin: 0 5px;
+  }
+
+  .navigation ul li a {
+    font-size: 1em;
+  }
+  .contact-container {
+    flex-direction: column;
+  }
+  .contact-container::after{
+    content: none;
+  }
+
+  .contact-form {
+    width: 80%;
+    margin-left: 24px;
+  }
+  .contact-form label {
+    margin-left: 0;
+    text-align: left;
+  }
+
+  .contact-form input,
+  .contact-form textarea {
+    margin-left: 0;
+    width: 90%;
+  }
+  .contact-form button {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+
+    .map {
+      width: 100%; /* Adjust the width to fit the screen */
+      margin-top: 20px; /* Add some spacing */
+      margin-left: auto; /* Center the map horizontally */
+      margin-right: auto;
+      overflow-x: hidden;
+    }
 }
 
 
