--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,15 @@
+
+@import 'responsive.scss';
+
+$primary-color: #000000;
+$secondary-color: #ffffff;
+
+@mixin button-hover {
+  background-color: #fff;
+  color: #000;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -8,29 +20,24 @@ body {
   padding: 0;
 }
 
-.container {
-  width: 80%;
-  margin: 0 auto;
-  padding: 20px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 
 .header {
-  background-color: #000000;
-  color: #fff;
+  background-color: $primary-color;
+  color: $secondary-color;
   padding: 10px 0;
 }
 
 .logo {
   margin: 0;
+  width: 70px;
+  height: 70px;
 }
 
 .header-left a {
   text-decoration: none;
-  color: #fff;
+  color: $secondary-color;
 }
+
 
 .navigation ul {
   list-style-type: none;
@@ -48,7 +55,7 @@ body {
 }
 
 .navigation ul li a {
-  color: #fff;
+  color: $secondary-color;
   text-decoration: none;
   font-size: 19px;
   position: relative;
@@ -60,7 +67,7 @@ body {
   left: 0;
   right: 0;
   bottom: -2px;
-  background-color: #fff;
+  background-color: $secondary-color;
   height: 1px;
   width: 0;
   transition: 0.3s ease;
@@ -69,6 +76,7 @@ body {
 .navigation ul li a:hover::after {
   width: 100%;
 }
+
 
 #home {
   width: 100%;
@@ -82,13 +90,13 @@ body {
 }
 
 #home h1 {
-  color: #fff;
+  color: $secondary-color;
   font-size: 4em;
   margin-bottom: 20px;
 }
 
 #home p {
-  color: #fff;
+  color: $secondary-color;
   font-size: 2em;
   margin-bottom: 50px;
   margin-top: 0;
@@ -96,45 +104,15 @@ body {
 
 #home .btn1,
 #home .btn2 {
-  padding: 10px 20px;
-  background-color: transparent;
-  color: #fff;
-  cursor: pointer;
-  border: 2px solid #fff;
-  border-radius: 20px;
-  font-size: 1.2em;
-  transition: all 0.3s ease;
-  text-decoration: none;
+  @extend .btn;
 }
 
-.btn1:hover,
-.btn2:hover {
-  background-color: #fff;
-  color: #000;
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
-}
-
-#home .btn2 {
-  margin-top: 20px;
-  margin-bottom: 40px;
-}
-
-.container2 {
-  display: grid;
-  max-width: 1500px;
-  margin: 0 auto;
-}
 
 #about {
-  background-color: #000;
-  color: #fff;
+  background-color: $primary-color;
+  color: $secondary-color;
   padding: 50px;
   text-align: center;
-
-  h1 {
-    display: block;
-    color: #fff;
-  }
 }
 
 .about-content {
@@ -146,399 +124,218 @@ body {
 
 .about-img {
   flex: 0 0 50%;
-  padding-right: 60px;
+  padding-right: 30px;
   margin-top: -100px;
+}
 
-  img {
-    max-height: 480px;
-    border-radius: 18%;
-  }
+.about-img img {
+  max-height: 480px;
+  border-radius: 18%;
 }
 
 .about-text {
   flex: 0 0 50%;
   max-width: 100%;
-
-  h2 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-  }
-
-  p {
-    font-size: 1.6em;
-    margin-bottom: 20px;
-  }
-
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  ul li {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-
-    &:before {
-      content: "•";
-      color: #fff;
-      margin-right: 10px;
-    }
-  }
-
-  a {
-    color: #fff;
-    text-decoration: underline;
-
-    &:hover {
-      color: #00f;
-    }
-  }
 }
+
+.about-text h2 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+}
+
+.about-text p {
+  font-size: 1.6em;
+  margin-bottom: 20px;
+}
+
+.about-text ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.about-text ul li {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+
+.about-text ul li:before {
+  content: "•";
+  color: $secondary-color;
+  margin-right: 10px;
+}
+
+.about-text a {
+  color: $secondary-color;
+  text-decoration: underline;
+}
+
+.about-text a:hover {
+  color: #00f;
+}
+
 
 #skills {
   background-color: #343a40;
-  color: #fff;
+  color: $secondary-color;
   padding: 50px 0;
-
-  h1 {
-    margin-bottom: 4.6em;
-    text-align: center;
-    font-size: 2.6em;
-  }
 }
 
-.container3 {
-  width: 80%;
-  margin: 0 auto;
+#skills h1 {
+  margin-bottom: 4.6em;
+  text-align: center;
+  font-size: 2.6em;
 }
 
 .skill {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-
-  p {
-    margin-left: 15px;
-  }
-
-  i {
-    margin-right: 20px;
-  }
-
-  .skill-bar {
-    height: 20px;
-    background-color: #6c757d;
-    border-radius: 5px;
-  }
 }
+
+.skill p {
+  margin-left: 15px;
+}
+
+.skill i {
+  margin-right: 20px;
+}
+
+.skill-bar {
+  height: 20px;
+  background-color: #6c757d;
+  border-radius: 5px;
+}
+
 
 #projects {
   background-color: #f2f2f2;
   padding: 50px 0;
+}
 
-  h1 {
-    text-align: center;
-    margin-bottom: 30px;
-    font-size: 2.6em;
-  }
+#projects h1 {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 2.6em;
 }
 
 .container4 {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-
-  .project-item {
-    width: 50%;
-    padding: 10px;
-    box-sizing: border-box;
-
-    img {
-      width: 100%;
-      max-width: 100%;
-      height: auto;
-      border-radius: 5px;
-      box-shadow: 0 0 10px black;
-      transition: transform 0.5s ease;
-
-      &:hover {
-        transform: scale(1.03);
-      }
-    }
-  }
+  overflow: hidden;
 }
+
+.project-item {
+  width: 50%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.project-item img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0 0 10px black;
+  transition: transform 0.5s ease;
+}
+
+.project-item:hover img {
+  transform: scale(1.03);
+}
+
 
 #contact {
-  background-color: #fff;
-  color: #000;
+  background-color: $secondary-color;
+  color: $primary-color;
   padding: 50px 0;
-
-  .contact-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    position: relative;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      width: 2px;
-      background-color: #000;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
-    .contact-form {
-      width: 40%;
-      padding: 20px;
-      border-radius: 10px;
-      border: 2px solid #000;
-      background-color: #f2f2f2;
-      margin-left: 60px;
-
-      h2 {
-        margin-bottom: 20px;
-        text-align: center;
-      }
-
-      form {
-        display: flex;
-        flex-direction: column;
-
-        label {
-          font-size: 1.2em;
-          margin-bottom: 10px;
-          margin-left: 120px;
-        }
-
-        input,
-        textarea {
-          padding: 10px;
-          margin-bottom: 20px;
-          border-radius: 5px;
-          border: 1px solid #ccc;
-          width: 70%;
-          margin-left: 120px;
-        }
-
-        button {
-          padding: 10px 20px;
-          background-color: #000;
-          color: #fff;
-          border: none;
-          border-radius: 5px;
-          font-size: 1.2em;
-          cursor: pointer;
-          transition: background-color 0.3s ease;
-          width: 70%;
-          margin-left: 120px;
-
-          &:hover {
-            background-color: #1a237e;
-          }
-        }
-      }
-    }
-
-    .map {
-      width: 45%;
-    }
-  }
 }
 
-.futer {
-  background-color: #000000;
-  color: #ffffff;
-  padding: 20px 0;
+.contact-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: relative;
+}
+
+.contact-container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 2px;
+  background-color: #000;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.contact-form {
+  width: 40%;
+  padding: 20px;
+  border-radius: 10px;
+  border: 2px solid #000;
+  background-color: #f2f2f2;
+  margin-left: 60px;
+}
+
+.contact-form h2 {
+  margin-bottom: 20px;
   text-align: center;
-
-  p {
-    margin: 0;
-  }
-}
-@media (max-width: 768px) {
-  body {
-    font-size: 14px;
-  }
-
-  .container {
-    width: 90%;
-  }
-
-  .header-left {
-    margin-right: auto;
-  }
-
-  .navigation ul {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .navigation ul li {
-    margin: 10px 0;
-  }
-
-  .contact-form {
-    width: 90%;
-    margin-left: 0;
-  }
-
-  .map {
-    width: 100%;
-  }
 }
 
-@media (min-width: 769px) and (max-width: 1200px) {
-  .container {
-    width: 90%;
-  }
-
-  .header-left {
-    margin-right: auto;
-  }
-
-  .navigation ul {
-    flex-direction: row;
-  }
-
-  .navigation ul li {
-    margin: 0 20px;
-  }
-
-  .contact-form {
-    width: 50%;
-    margin-left: 60px;
-  }
-
-  .map {
-    width: 50%;
-  }
+.contact-form form {
+  display: flex;
+  flex-direction: column;
 }
-/* Styles for mobile devices */
-@media (max-width: 480px) {
-  .container {
-    width: 90%;
-    padding: 10px;
-  }
 
-  .header-left {
-    margin-right: auto;
-  }
+.contact-form label {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+  margin-left: 120px;
+}
 
-  .navigation ul {
-    flex-direction: column;
-    align-items: center;
-  }
+.contact-form input,
+.contact-form textarea {
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 70%;
+  margin-left: 120px;
+}
 
-  .navigation ul li {
-    margin: 10px 0;
-  }
+.contact-form button {
+  padding: 10px 20px;
+  background-color: #000;
+  color: $secondary-color;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 70%;
+  margin-left: 120px;
+}
 
-  .navigation ul li:last-child {
-    margin-bottom: 20px;
-  }
+.contact-form button:hover {
+  background-color: #1a237e;
+}
 
-  .contact-form {
-    width: 90%;
-    margin: 0 auto; /* Center the contact form */
-  }
+.map {
+  width: 45%;
+}
 
-  .map {
-    width: 100%;
-  }
 
-  body {
-    font-size: 14px;
-  }
-
-  .header {
-    padding: 5px 0;
-  }
-
-  .logo {
-    width: 70px;
-  }
-
-  .header-right {
-    margin-left: auto;
-  }
-
-  .navigation ul li {
-    margin-right: 0;
-  }
-
-  .navigation ul li a {
-    font-size: 16px;
-  }
-
-  #home h1 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
-  }
-
-  #home p {
-    font-size: 1.5em;
-    margin-bottom: 30px;
-  }
-
-  #home .btn1,
-  #home .btn2 {
-    padding: 8px 16px;
-    font-size: 1em;
-    margin-bottom: 20px;
-  }
-
-  #about h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
-  }
-
-  .about-text p {
-    font-size: 1.2em;
-    margin-bottom: 15px;
-  }
-
-  #skills h1 {
-    font-size: 2.2em;
-    margin-bottom: 30px;
-  }
-
-  .skill i {
-    font-size: 36px;
-  }
-
-  .skill p {
-    font-size: 1em;
-  }
-
-  #projects h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
+footer {
+  .futer {
+    background-color: $primary-color;
+    color: $secondary-color;
+    padding: 20px 0;
+    text-align: center;
   }
 
   .futer p {
-    font-size: 0.8em;
+    margin: 0;
   }
-
-  /* Additional styles for navigation */
-  .navigation {
-    margin-top: 20px; /* Add space between header and navigation */
-  }
-
-  .navigation ul li {
-    margin-right: 0;
-  }
-
-  .navigation ul li a {
-    font-size: 1.2em;
-  }
-
-  /* Additional styles for contact section */
-  #contact {
-    padding: 30px 0; /* Adjust padding */
-  }
-
 }
