--- a/style.scss
+++ b/style.scss
@@ -1,14 +1,15 @@
-
 @import 'responsive.scss';
-
 $primary-color: #000000;
 $secondary-color: #ffffff;
 
-@mixin button-hover {
-  background-color: #fff;
-  color: #000;
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+
 
 html {
   scroll-behavior: smooth;
@@ -19,6 +20,16 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
 
 .header {
@@ -37,7 +48,6 @@ body {
   text-decoration: none;
   color: $secondary-color;
 }
-
 
 .navigation ul {
   list-style-type: none;
@@ -78,14 +88,13 @@ body {
 }
 
 
+
 #home {
   width: 100%;
   height: 90vh;
-  background-image: url('images/backgroundimg4.jpg');
-  display: flex;
+  background-image: url("images/backgroundimg4.jpg");
+  @include flex-center;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   text-align: center;
 }
 
@@ -102,10 +111,29 @@ body {
   margin-top: 0;
 }
 
-#home .btn1,
-#home .btn2 {
-  @extend .btn;
+#home .btn1, #home .btn2 {
+  padding: 10px 20px;
+  background-color: transparent;
+  color: $secondary-color;
+  cursor: pointer;
+  border: 2px solid $secondary-color;
+  border-radius: 20px;
+  font-size: 1.2em;
+  transition: all 0.3s ease;
+  text-decoration: none;
 }
+
+.btn1:hover, .btn2:hover {
+  background-color: $secondary-color;
+  color: #000;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+}
+
+#home .btn2 {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
 
 
 #about {
@@ -115,10 +143,12 @@ body {
   text-align: center;
 }
 
+#about h1 {
+  display: block;
+}
+
 .about-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex-center;
   flex-wrap: wrap;
 }
 
@@ -126,79 +156,85 @@ body {
   flex: 0 0 50%;
   padding-right: 30px;
   margin-top: -100px;
-}
 
-.about-img img {
-  max-height: 480px;
-  border-radius: 18%;
+  img {
+    max-height: 480px;
+    border-radius: 18%;
+  }
 }
 
 .about-text {
   flex: 0 0 50%;
   max-width: 100%;
+
+  h2 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+  }
+
+  p {
+    font-size: 1.6em;
+    margin-bottom: 20px;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      font-size: 1.2em;
+      margin-bottom: 10px;
+
+      &:before {
+        content: "•";
+        color: $secondary-color;
+        margin-right: 10px;
+      }
+    }
+  }
+
+  a {
+    color: $secondary-color;
+    text-decoration: underline;
+
+    &:hover {
+      color: #00f;
+    }
+  }
 }
 
-.about-text h2 {
-  font-size: 2.5em;
-  margin-bottom: 20px;
-}
-
-.about-text p {
-  font-size: 1.6em;
-  margin-bottom: 20px;
-}
-
-.about-text ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.about-text ul li {
-  font-size: 1.2em;
-  margin-bottom: 10px;
-}
-
-.about-text ul li:before {
-  content: "•";
-  color: $secondary-color;
-  margin-right: 10px;
-}
-
-.about-text a {
-  color: $secondary-color;
-  text-decoration: underline;
-}
-
-.about-text a:hover {
-  color: #00f;
-}
 
 
 #skills {
   background-color: #343a40;
   color: $secondary-color;
   padding: 50px 0;
+
+  h1 {
+    margin-bottom: 4.6em;
+    text-align: center;
+    font-size: 2.6em;
+  }
 }
 
-#skills h1 {
-  margin-bottom: 4.6em;
-  text-align: center;
-  font-size: 2.6em;
+.container3 {
+  width: 80%;
+  margin: 0 auto;
 }
 
 .skill {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-}
 
-.skill p {
-  margin-left: 15px;
-}
+  p {
+    margin-left: 15px;
+  }
 
-.skill i {
-  margin-right: 20px;
+  i {
+    margin-right: 20px;
+  }
 }
 
 .skill-bar {
@@ -208,15 +244,16 @@ body {
 }
 
 
+
 #projects {
   background-color: #f2f2f2;
   padding: 50px 0;
-}
 
-#projects h1 {
-  text-align: center;
-  margin-bottom: 30px;
-  font-size: 2.6em;
+  h1 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 2.6em;
+  }
 }
 
 .container4 {
@@ -230,112 +267,124 @@ body {
   width: 50%;
   padding: 10px;
   box-sizing: border-box;
+
+  img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px black;
+    transition: transform 0.5s ease;
+  }
+
+  &:hover img {
+    transform: scale(1.03);
+  }
 }
 
-.project-item img {
-  width: 100%;
-  max-width: 100%;
-  height: auto;
-  border-radius: 5px;
-  box-shadow: 0 0 10px black;
-  transition: transform 0.5s ease;
-}
-
-.project-item:hover img {
-  transform: scale(1.03);
-}
 
 
 #contact {
-  background-color: $secondary-color;
-  color: $primary-color;
+  background-color: #fff;
+  color: #000;
   padding: 50px 0;
-}
 
-.contact-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  position: relative;
-}
+  .contact-container {
+    @include flex-center;
+    justify-content: space-between;
+    position: relative;
 
-.contact-container::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 2px;
-  background-color: #000;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.contact-form {
-  width: 40%;
-  padding: 20px;
-  border-radius: 10px;
-  border: 2px solid #000;
-  background-color: #f2f2f2;
-  margin-left: 60px;
-}
-
-.contact-form h2 {
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.contact-form form {
-  display: flex;
-  flex-direction: column;
-}
-
-.contact-form label {
-  font-size: 1.2em;
-  margin-bottom: 10px;
-  margin-left: 120px;
-}
-
-.contact-form input,
-.contact-form textarea {
-  padding: 10px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  width: 70%;
-  margin-left: 120px;
-}
-
-.contact-form button {
-  padding: 10px 20px;
-  background-color: #000;
-  color: $secondary-color;
-  border: none;
-  border-radius: 5px;
-  font-size: 1.2em;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  width: 70%;
-  margin-left: 120px;
-}
-
-.contact-form button:hover {
-  background-color: #1a237e;
-}
-
-.map {
-  width: 45%;
-}
-
-
-footer {
-  .futer {
-    background-color: $primary-color;
-    color: $secondary-color;
-    padding: 20px 0;
-    text-align: center;
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 2px;
+      background-color: #000;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
-  .futer p {
+  .contact-form {
+    width: 40%;
+    padding: 20px;
+    border-radius: 10px;
+    border: 2px solid #000;
+    background-color: #f2f2f2;
+    margin-left: 60px;
+
+    h2 {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+
+      label {
+        font-size: 1.2em;
+        margin-bottom: 10px;
+        margin-left: 120px;
+      }
+
+      input,
+      textarea {
+        padding: 10px;
+        margin-bottom: 20px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        width: 70%;
+        margin-left: 120px;
+      }
+
+      button {
+        padding: 10px 20px;
+        background-color: #000;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        font-size: 1.2em;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        width: 70%;
+        margin-left: 120px;
+
+        &:hover {
+          background-color: #1a237e;
+        }
+      }
+    }
+  }
+
+  .map {
+    width: 45%;
+  }
+}
+
+
+
+.futer {
+  background-color: $primary-color;
+  color: $secondary-color;
+  padding: 20px 0;
+  text-align: center;
+
+  p {
     margin: 0;
+    font-size: 1.1em;
+  }
+
+  i {
+    font-size: 30px;
+    margin-top: 10px;
+  }
+
+  .sitemap-link,
+  .responsive-link {
+    color: $secondary-color;
+    text-decoration: none;
+    margin-left: 10px;
   }
 }
